# cloud-clipboard-go

./: .gitignore  .goreleaser.yaml  .pages_url  DEPENDENCY_ANALYSIS.md  README.en.md  README.md  README.zh.md  build-android.bat  build-android.ps1  build-android.sh  docker-compose.yml  package-lock.json
.github/: release.yml
.github/workflows/: android.yml  build-docker.yml  build-luci.yml  build-openwrt-ipk.yml  release.yml
Android/: build.gradle.kts  local.properties  settings.gradle  settings.gradle.kts
Android/app/: build.gradle
android/: settings.gradle.kts
android/app/: .gitignore  build.gradle.kts
client/: package.json
client/src/: App.vue  main.js  websocket.js
clipboard-monitor/: README.md  build.bat  build.ps1  build.sh
clipboard-monitor/src-tauri/: Cargo.toml  config.json  package-lock.json  tauri.conf.json
clipboard-monitor/src-tauri/src/: clipboard.rs  commands.rs  config.rs  lib.rs  main.rs  notifications.rs  tray.rs  uploader.rs
clipboard-monitor/src-tauri/static/: config.html  index.html
clipboard-monitor/src-tauri/static/js/: package-lock.json  package.json
cloud-clip/: .goreleaser.yaml  Dockerfile  auth.go  config copy.json  config.go  config.json  config.md  entrypoint.sh  flags.go  go.mod  go.sum  history.go  history.json  main.go  msg.go  static_extern.go  type.go
cloud-clip/lib/: auth.go  config.go  handler.go  main.go  mobile_adapter.go  msg.go  static_default.go  type.go  utils.go
cloud-clip/mobile/: build-aar.sh  (+1 more)
cloudflare/: README.md  deploy.sh  package-lock.json
openwrt/: README.md
shortcuts/: shortcuts.js
(+194 files in other folders)
