[package]
name = "clipboard-monitor"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-os = "2.0"
clipboard-rs = "0.3.0"
regex = "1"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
notify-rust = "4.10"
log = { version = "0.4", features = ["std"] }
env_logger = "0.10"
fern = "0.6"
chrono = "0.4"
dirs = "5.0"

[[bin]]
name = "clipboard-monitor"
path = "src/main.rs"
